rust_ggml/ffi_ggml/src/ggml_bindings.rs

#[test]
fn bindgen_test_layout_ggml_opt_params_ggml_params_lbfgs() {
    assert_eq!(
        ::std::mem::size_of::<ggml_opt_params_ggml_params_lbfgs>(),
        36usize,
        concat!("Size of: ", stringify!(ggml_opt_params_ggml_params_lbfgs))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_opt_params_ggml_params_lbfgs>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(ggml_opt_params_ggml_params_lbfgs)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).m as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(m)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).n_iter as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(n_iter)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).max_linesearch as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(max_linesearch)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).eps as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(eps)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).ftol as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(ftol)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).wolfe as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(wolfe)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).min_step as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(min_step)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).max_step as *const _
                as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(max_step)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params_ggml_params_lbfgs>())).linesearch as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params_ggml_params_lbfgs),
            "::",
            stringify!(linesearch)
        )
    );
}
#[test]
fn bindgen_test_layout_ggml_opt_params() {
    assert_eq!(
        ::std::mem::size_of::<ggml_opt_params>(),
        88usize,
        concat!("Size of: ", stringify!(ggml_opt_params))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_opt_params>(),
        4usize,
        concat!("Alignment of ", stringify!(ggml_opt_params))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params>())).n_threads as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(n_threads)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params>())).past as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(past)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params>())).delta as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(delta)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params>())).max_no_improvement as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(max_no_improvement)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params>())).print_forward_graph as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(print_forward_graph)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ggml_opt_params>())).print_backward_graph as *const _ as usize
        },
        21usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(print_backward_graph)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params>())).adam as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(adam)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_opt_params>())).lbfgs as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_opt_params),
            "::",
            stringify!(lbfgs)
        )
    );
}
extern "C" {
    pub fn ggml_opt_default_params(type_: ggml_opt_type) -> ggml_opt_params;
}
extern "C" {
    pub fn ggml_opt(
        ctx: *mut ggml_context,
        params: ggml_opt_params,
        f: *mut ggml_tensor,
    ) -> ggml_opt_result;
}
extern "C" {
    pub fn ggml_quantize_q4_0(
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> size_t;
}
extern "C" {
    pub fn ggml_quantize_q4_1(
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> size_t;
}
extern "C" {
    pub fn ggml_cpu_has_avx() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx2() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_fma() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_neon() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_arm_fma() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_f16c() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_fp16_va() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_wasm_simd() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_blas() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_sse3() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_vsx() -> ::std::os::raw::c_int;
}
pub type dequantize_row_q_t = ::std::option::Option<
    unsafe extern "C" fn(x: *const ::std::os::raw::c_void, y: *mut f32, k: ::std::os::raw::c_int),
>;
pub type quantize_row_q_t = ::std::option::Option<
    unsafe extern "C" fn(x: *const f32, y: *mut ::std::os::raw::c_void, k: ::std::os::raw::c_int),
>;
pub type vec_dot_q_t = ::std::option::Option<
    unsafe extern "C" fn(
        n: ::std::os::raw::c_int,
        s: *mut f32,
        x: *const ::std::os::raw::c_void,
        y: *const ::std::os::raw::c_void,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct quantize_fns_t {
    pub dequantize_row_q: dequantize_row_q_t,
    pub quantize_row_q: quantize_row_q_t,
    pub quantize_row_q_reference: quantize_row_q_t,
    pub quantize_row_q_dot: quantize_row_q_t,
    pub vec_dot_q: vec_dot_q_t,
}
#[test]
fn bindgen_test_layout_quantize_fns_t() {
    assert_eq!(
        ::std::mem::size_of::<quantize_fns_t>(),
        40usize,
        concat!("Size of: ", stringify!(quantize_fns_t))
    );
    assert_eq!(
        ::std::mem::align_of::<quantize_fns_t>(),
        8usize,
        concat!("Alignment of ", stringify!(quantize_fns_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<quantize_fns_t>())).dequantize_row_q as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(quantize_fns_t),
            "::",
            stringify!(dequantize_row_q)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<quantize_fns_t>())).quantize_row_q as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(quantize_fns_t),
            "::",
            stringify!(quantize_row_q)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<quantize_fns_t>())).quantize_row_q_reference as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(quantize_fns_t),
            "::",
            stringify!(quantize_row_q_reference)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<quantize_fns_t>())).quantize_row_q_dot as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(quantize_fns_t),
            "::",
            stringify!(quantize_row_q_dot)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<quantize_fns_t>())).vec_dot_q as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(quantize_fns_t),
            "::",
            stringify!(vec_dot_q)
        )
    );
}
extern "C" {
    pub fn ggml_internal_get_quantize_fn(i: size_t) -> quantize_fns_t;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
